YV-547 allow 100% free text to localize on app page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -981,6 +981,7 @@ en:
     symbian:                                    "Symbian"
     mobile web:                                 "Mobile Web"
     amazon:                                     "Kindle Fire"
+    free overlay:                               "100% Free"
   pages:
     generic_error:
       title:                                    "Oops!"
